--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
 
                 <!-- Menu principal -->
                 <div id="menu" class="isoler-haut jumbotron">
-                    <h1>Le jeu du serpent</h1>
-                    <p>Dirigez le serpent avec les flèches du clavier pour lui faire manger les petits carrés et le faire grossir.<br />Si le serpent touche sa propre queue c'est perdu.</p>
-                    <p>
+                    <h1>Snake/h1>
                         <a class="btn btn-success btn-lg" id="commencer">Commencer</a>
                         <a class="btn btn-primary btn-lg reglages disabled">Réglages</a>
                     </p>
@@ -41,7 +39,7 @@
                 <!-- Game Over -->
                 <div id="fin" class="isoler-haut jumbotron">
                     <h1>Game Over !</h1>
-                    <p id="fin-desc">Le serpent a touché sa queue !</p>
+                    <p id="fin-desc">Game Over !</p>
                     <p>
                         <a class="btn btn-success btn-lg" id="recommencer">Recommencer</a>
                         <a class="btn btn-primary btn-lg reglages disabled">Réglages</a>
@@ -50,11 +48,6 @@
             </section>
         </div>
 
-        <footer class="footer centrer isoler-haut">
-            <div class="container">
-                <p class="text-muted">Réalisé par Romain Semler ©2017</p>
-            </div>
-        </footer>
 
         <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
