--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
                 <!-- Menu principal -->
                 <div id="menu" class="isoler-haut jumbotron">
-                    <h1>Snake/h1>
+                    <h1>Snake</h1>
                         <a class="btn btn-success btn-lg" id="commencer">Commencer</a>
                         <a class="btn btn-primary btn-lg reglages disabled">Réglages</a>
                     </p>
