--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
                 <div id="menu" class="isoler-haut jumbotron">
                     <h1>Snake</h1>
                         <a class="btn btn-success btn-lg" id="commencer">Commencer</a>
-                        <a class="btn btn-primary btn-lg reglages disabled">Réglages</a>
                     </p>
                 </div>
 
@@ -37,7 +36,6 @@
                     <h1>Game Over !</h1>
                     <p>
                         <a class="btn btn-success btn-lg" id="recommencer">Recommencer</a>
-                        <a class="btn btn-primary btn-lg reglages disabled">Réglages</a>
                     </p>
                 </div>
             </section>
@@ -47,6 +45,6 @@
         <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="js/snake.js"></script>
-        <noscript>Quel dommage ! Votre navigateur ne supporte pas JavaScript... ou alors JavaScript a été désactivé.</noscript>
+        <noscript>Une erreur est survenu.</noscript>
     </body>
 </html>
