--- a/index.html
+++ b/index.html
@@ -28,23 +28,31 @@
                 <div id="menu" class="isoler-haut jumbotron">
                     <h1>Snake</h1>
                         <a class="btn btn-success btn-lg" id="commencer">Commencer</a>
+                        <a class="btn btn-primary btn-lg reglages disabled">Réglages</a>
                     </p>
                 </div>
 
                 <!-- Game Over -->
                 <div id="fin" class="isoler-haut jumbotron">
                     <h1>Game Over !</h1>
+                    <p id="fin-desc"></p>
                     <p>
                         <a class="btn btn-success btn-lg" id="recommencer">Recommencer</a>
+                        <a class="btn btn-primary btn-lg reglages disabled">Réglages</a>
                     </p>
                 </div>
             </section>
         </div>
 
+        <footer class="footer centrer isoler-haut">
+            <div class="container">
+                <p class="text-muted"></p>
+            </div>
+        </footer>
 
         <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="js/snake.js"></script>
-        <noscript>Une erreur est survenu.</noscript>
+        <noscript>Quel dommage ! Votre navigateur ne supporte pas JavaScript... ou alors JavaScript a été désactivé.</noscript>
     </body>
 </html>
